adds the rental image, rental, and map test

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -4,6 +4,8 @@
   <LinkTo @route="about" class="button">About Us</LinkTo>
 </Jumbo>
 
+<h1>{{@model.title}}</h1>
+
 <div class="rentals">
   <ul class="results">
     <li><Rental /></li>
