working with ember models

--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -1,11 +1,11 @@
 <Jumbo>
   <h2>Contact Us</h2>
   <p>
-    Super Rentals Representatives would love to help you<br>
+    Sunny Rentals Representatives would love to help you<br>
     choose a destination or answer any questions you may have.
   </p>
   <address>
-    Super Rentals HQ
+    Sunny Rentals HQ
     <p>
       1212 Test Address Avenue<br>
       Testington, OR 97233
